--- a/css/style.css
+++ b/css/style.css
@@ -95,11 +95,11 @@ i { font-size: 16px; }
 
 
 /* layout */
-.main { margin: 0 auto; background-color: #fff; }
+.main { margin: 0 auto; background-color: #fff;} 
 .content { width: 88%; padding: 6%; margin: 0; }
 .header { padding: 0 0 3%; }
 .avatar { width: 152px; height: 152px; position: relative; }
-.avatar .avatar_pic { width: 150px; height: 150px; display: block; background: url(../images/avatar.png) no-repeat center center;  border: 1px #ccc solid; overflow: hidden; }
+.avatar .avatar_pic { width: 150px; height: 150px; display: block; background: url(../images/avatar.jpg) no-repeat center center; background-size: cover;  border: 1px #ccc solid; overflow: hidden; }
 .avatar:hover .avatar_pic { animation:myloading 1s linear infinite; -moz-animation:myloading 1s linear infinite; -webkit-animation:myloading 1s linear infinite; -o-animation:myloading 1s linear infinite; }
 .avatar .avatar_pic em { width: 130px; height: 130px; line-height: 130px; text-align: center; position: absolute; left: 1px; top: 1px; background-color: rgba(255,255,255,0.95); color: #999; font-size: 22px; filter:alpha(opacity=0); -moz-opacity:0; opacity:0; border: 10px #fff solid; }
 .avatar:hover .avatar_pic em { filter:alpha(opacity=100); -moz-opacity:1; opacity:1; }
@@ -180,21 +180,8 @@ i { font-size: 16px; }
 .banner .logo { width: 200px; height: 200px; position: absolute; top: 50%; left: 50%; margin-left: -100px; margin-top: -100px; z-index:  110;}
 .banner .banner_bg { width: 100%; height: 100%; position: absolute; left: 0; top: 0; z-index: 100; background-color: rgba(0,0,0,0.5); }
 
-/* product logo */
-.banner.product_h1 { background: url(../images/product_1_bg.jpg) no-repeat fixed 50% 0; background-size: cover; }
-.banner.product_h1 .logo { background: url(../images/product_1_logo.png) no-repeat center center rgba(0,0,0,0); height: 80px; margin-top: -40px; }
-.banner.product_h2 { background: url(../images/product_2_bg.jpg) no-repeat fixed 50% 0; background-size: cover; }
-.banner.product_h2 .logo { background: url(../images/product_2_logo.png) no-repeat center center; }
-.banner.product_h3 { background: url(../images/product_3_bg.jpg) no-repeat fixed 50% 0; background-size: cover; }
-.banner.product_h3 .logo { background: url(../images/product_3_logo.png) no-repeat center center; }
-.banner.product_h4 { background: url(../images/product_4_bg.jpg) no-repeat fixed 50% 0; background-size: cover; }
-.banner.product_h4 .logo { background: url(../images/product_4_logo.png) no-repeat center center; width: 270px; height: 80px; margin-top: -40px; margin-left: -135px; }
-.banner.product_h5 { background: url(../images/product_5_bg.jpg) no-repeat fixed 50% 0; background-size: cover; }
-.banner.product_h5 .logo { background: url(../images/product_5_logo.png) no-repeat center center; width: 220px; margin-left: -110px; }
-.banner.product_h6 { background: url(../images/product_6_bg.jpg) no-repeat fixed 50% 0; background-size: cover; }
-.banner.product_h6 .logo { color: #fff; text-align: center; line-height: 200px; font-size: 22px; }
-
-.tip_area_close { width: 40px; height: 40px; line-height: 40px; text-align: center; position: fixed; left: 10px; top: 10px; z-index: 120; display: block; overflow: hidden; font-size: 32px; color: #fff; display: none; filter:alpha(opacity=0); -moz-opacity:0; opacity:0; }
+ 
+.tip_area_close { width: 40px; height: 40px; line-height: 40px; text-align: center; position: fixed; left: 10px; top: 10px; z-index: 120; display: block; overflow: hidden; font-size: 32px; color: #000; display: none; filter:alpha(opacity=0); -moz-opacity:0; opacity:0; }
 
 .descprition h3 { font-size: 14px; color: #aaa; border-top: 1px #eee solid; border-bottom: 1px #eee solid; padding: 15px 0; margin-bottom: 20px; }
 .descprition h3 i { font-size: 16px; float: left; margin-right: 10px; }
